[package]
name = "quic"
version = "2.2.3"
authors = ["Roger Qiu <roger.qiu@polyhack.io>"]
license-file = "LICENSE"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]
path = "src/native/napi/lib.rs"

[dependencies]
napi = { version = "2", features = ["async", "napi6", "serde-json"] }
serde = { version = "1.0", features = ["derive"] }
napi-derive = { version = "2", default-features = false, features = ["strict", "compat-mode"] }
quiche = { version = "0.19.0", features = ["boringssl-boring-crate"] }
boring = "4"

[build-dependencies]
napi-build = "2"
